force-app/main/default/objects/Sample__c/fields/Diagnostics_Test__c.field-meta.xml
<CustomField>
    <fullName>Diagnostics_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnostics  Test</label>
    <referenceTo>Medical_Test__c</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>