force-app/main/default/objects/Sample__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Time__c</columns>
    <columns>Diagnostics_Test__c</columns>
    <columns>Doctor__c</columns>
    <columns>Patient__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Tag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>